added new V2 handler for movie's part, openAPI updated
